--- a/views/rooms/index.ejs
+++ b/views/rooms/index.ejs
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rooms</title>
-</head>
-<body>
+<% layout('/layouts/boilerplate') %>
     <h1>All Rooms</h1>
     <div>
         <a href="/rooms/new">Add Room</a>
@@ -16,5 +8,3 @@
             <li><a href="/rooms/<%= room.id %>"><%= room.title %></a></li>
         <% } %> 
     </ul>
-</body>
-</html>
