--- a/views/rooms/edit.ejs
+++ b/views/rooms/edit.ejs
@@ -2,12 +2,28 @@
     <h1>Edit Room</h1>
     <form action="/rooms/<%= room._id %>?_method=PUT" method="POST">
         <div>
-            <label for="title">Title</label>
-            <input type="text" id="title" name="room[title]" value="<%= room.title %>">
+            <label for="nodeId">nodeId</label>
+            <input type="text" id="nodeId" name="room[nodeId]" value="<%= room.nodeId %>">
         </div>
         <div>
             <label for="location">Location</label>
             <input type="text" id="location" name="room[location]" value="<%= room.location %>">
+        </div>
+        <div>
+            <label for="title">Title</label>
+            <input type="text" id="title" name="room[title]" value="<%= room.title %>">
+        </div>
+        <div>
+            <label for="description">Description</label>
+            <input type="text" id="description" name="room[description]" value="<%= room.description %>">
+        </div>
+        <div>
+            <label for="zones">Zones</label>
+            <input type="text" id="zones" name="room[zones]" value="<%= room.zones %>">
+        </div>
+        <div>
+            <label for="players">Players</label>
+            <input type="text" id="players" name="room[players]" value="<%= room.players %>">
         </div>
         <button>Update Room</button>
     </form>
