--- a/views/rooms/new.ejs
+++ b/views/rooms/new.ejs
@@ -1,13 +1,30 @@
 <% layout('/layouts/boilerplate') %>
     <form action="/rooms" method="POST">
         <div>
-            <label for="title">Title</label>
-            <input type="text" id="title" name="room[title]">
+            <label for="nodeId">nodeId</label>
+            <input type="text" id="nodeId" name="room[nodeId]">
         </div>
         <div>
             <label for="location">Location</label>
             <input type="text" id="location" name="room[location]">
         </div>
+        <div>
+            <label for="title">Title</label>
+            <input type="text" id="title" name="room[title]">
+        </div>
+        <div>
+            <label for="description">Description</label>
+            <input type="text" id="description" name="room[description]">
+        </div>
+        <div>
+            <label for="zones">Zones</label>
+            <input type="text" id="zones" name="room[zones]">
+        </div>
+        <div>
+            <label for="players">Players</label>
+            <input type="text" id="players" name="room[players]">
+        </div>
+        
         <button>Add Room</button>
     </form>
     <a href="/rooms">All Rooms</a>
