Found solution to some of the problems of casting data to mongodb.
Getting familiar with the realtionship and flow between the Model,
the Seed Index, and the Data module.

Created some separate models/seeds/modules for other aspects of game
data.

--- a/views/rooms/show.ejs
+++ b/views/rooms/show.ejs
@@ -1,7 +1,7 @@
 <% layout('/layouts/boilerplate') %>
-    <h1><%= room.title %> </h1>
+    <h1><%= room.title %></h1>
     <h2><%= room.description %></h2>
-    <h3>Players present: <%= room.players %></h3>
+    <h3>Players present: <%= room.players[0] %></h3>
     <h3>nodeId: <%= room.nodeId %></h3>
     <h3>Number of zones: <%= room.zones %></h3>
     <h3>Grid location: <%= room.location %></h2>
