Got app up and running with mongodb. Working on mastering schemas

--- a/views/rooms/new.ejs
+++ b/views/rooms/new.ejs
@@ -21,8 +21,12 @@
             <input type="text" id="zones" name="room[zones]">
         </div>
         <div>
-            <label for="players">Players</label>
-            <input type="text" id="players" name="room[players]">
+            <label for="players">Player Name</label>
+            <input type="text" id="player_name" name="room[players.player_name]">
+        </div>
+        <div>
+            <label for="players">Player ID</label>
+            <input type="text" id="player_id" name="room[players.player_id]">
         </div>
         
         <button>Add Room</button>
