--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -18,7 +18,7 @@
           </div>
         </form>
       </nav>
-    <main class="constainer">
+    <main class="container">
         <%- body %> 
     </main>    
     <!-- JavaScript Bundle with Popper -->
