--- a/views/rooms/new.ejs
+++ b/views/rooms/new.ejs
@@ -21,12 +21,8 @@
             <input type="text" id="zones" name="room[zones]">
         </div>
         <div>
-            <label for="players">Player Name</label>
-            <input type="text" id="player_name" name="room[players.player_name]">
-        </div>
-        <div>
-            <label for="players">Player ID</label>
-            <input type="text" id="player_id" name="room[players.player_id]">
+            <label for="players">Players</label>
+            <input type="text" id="players" name="room[players]">
         </div>
         
         <button>Add Room</button>
