--- a/views/rooms/show.ejs
+++ b/views/rooms/show.ejs
@@ -1,9 +1,11 @@
 <% layout('/layouts/boilerplate') %>
     <h1><%= room.title %></h1>
     <h2><%= room.description %></h2>
-    
-    <h3>Player Name <%= room.player_name %></h3>
-    <h3>Player id <%= room.player_id %></h3>
+    <h3>Players present: 
+        <ul>
+            <li><%= room.players[0] %></li>
+        </ul>
+    </h3>
     <h3>nodeId: <%= room.nodeId %></h3>
     <h3>Number of zones: <%= room.zones %></h3>
     <h3>Grid location: <%= room.location %></h2>
