created a new schema, seed and data file for players

--- a/views/rooms/show.ejs
+++ b/views/rooms/show.ejs
@@ -1,10 +1,10 @@
 <% layout('/layouts/boilerplate') %>
     <h1><%= room.title %></h1>
     <h2><%= room.description %></h2>
-    <h3>Players present: 
+    <!-- <h3>Players present: 
         <ul>
-            <li><%= room.players[0] %></li>
-        </ul>
+            
+        </ul> -->
     </h3>
     <h3>nodeId: <%= room.nodeId %></h3>
     <h3>Number of zones: <%= room.zones %></h3>
