Successfully served game.js to home page template

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,17 @@
+<% layout('/layouts/header.js') %>
 
-    <h1>Home Page</h1>
-
+<body>
+    <div class="container">
+      <div id="text">Text</div>
+      <div id="option-buttons" class="btn-grid">
+        <button class="btn">Option 1</button>
+        <button class="btn">Option 2</button>
+        <button class="btn">Option 3</button>
+        <button class="btn">Option 4</button>
+      </div>
+    </div>
     <% startGame(); %>
+  </body>
+  </html>
+
+<script src="/public/game.js"></script>
